# bonsaidb

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  bake-markdown.sh  clippy.toml  codecov.yaml  deny.toml  generate-code-coverage.sh  git-pre-commit-hook.sh  rustfmt.toml
benchmarks/: Cargo.toml
benchmarks/benches/: collections.rs  key-value.rs  suite.rs
benchmarks/benches/collections/: bonsai.rs  mod.rs  rusqlite.rs
benchmarks/benches/commerce/: README.md  bonsai.rs  execute.rs  main.rs  model.rs  mongo.rs  plan.rs  plot.rs  postgres.rs  utils.rs
benchmarks/benches/key_value/: bonsai.rs  mod.rs  redis.rs
bonsaidb/: Cargo.toml
bonsaidb/examples/: basic-local-multidb.rs  pubsub.rs  server.rs  users.rs  view-examples.rs  view-histogram.rs
bonsaidb/examples/support/: schema.rs
bonsaidb/src/: cli.rs  lib.rs  main.rs
bonsaidb/src/cli/: admin.rs
bonsaidb/tests/: core-suite.rs  custom-api.rs  simultaneous-connections.rs
book/book-examples/: Cargo.toml
book/book-examples/tests/: view-example-enum.rs  view-example-string.rs
circulate/: Cargo.toml  README.md
circulate/examples/: circulate-basic.rs
circulate/src/: lib.rs
client/: Cargo.toml
client/src/: builder.rs  client.rs  error.rs  lib.rs  tests.rs
client/src/client/: quic_worker.rs  remote_database.rs  tungstenite_worker.rs  wasm_websocket_worker.rs  websocket_worker.rs  worker.rs
client/tests/: simultaneous-connections.rs
core/: Cargo.toml  expand.rs
core/src/: backend.rs  connection.rs  custom_api.rs  document.rs  kv.rs  lib.rs  limits.rs  networking.rs  permissions.rs  pubsub.rs  test_util.rs  transaction.rs
core/src/admin/: database.rs  encryption_key.rs  group.rs  mod.rs  password_config.rs  role.rs  user.rs
core/src/document/: revision.rs
core/src/kv/: get.rs  namespaced.rs  set.rs  timestamp.rs
core/src/permissions/: action.rs  actions.rs  bonsai.rs  group.rs  mod.rs  pliant.rs  role.rs  statement.rs
core/src/schema/: collection.rs  database.rs  mod.rs  names.rs  schematic.rs  view.rs
crates/bonsaidb/: Cargo.toml  crate-docs.md
crates/bonsaidb-client/: Cargo.toml  README.md  client-feature-flags.md
crates/bonsaidb-client/.rustme/: config.ron  docs.md
crates/bonsaidb-client/src/: .crate-docs.md  builder.rs  client.rs  error.rs  lib.rs
crates/bonsaidb-core/: Cargo.toml  README.md
crates/bonsaidb-core/src/: api.rs  connection.rs  custom_api.rs  document.rs  key.rs  keyvalue.rs  kv.rs  lib.rs  limits.rs  networking.rs  pubsub.rs  schema.rs  test_util.rs  transaction.rs
crates/bonsaidb-files/: Cargo.toml  README.md
crates/bonsaidb-files/examples/: basic-files-async.rs  basic-files.rs  file-configs.rs
crates/bonsaidb-files/src/: direct.rs  lib.rs  metadata.rs  schema.rs  tests.rs
crates/bonsaidb-jobs/: Cargo.toml
crates/bonsaidb-jobs/examples/: test.rs
crates/bonsaidb-jobs/src/: fifo.rs  job.rs  lib.rs  orchestrator.rs  queue.rs
crates/bonsaidb-keystorage-s3/: Cargo.toml  README.md
crates/bonsaidb-keystorage-s3/src/: lib.rs
crates/bonsaidb-local/: Cargo.toml  README.md  local-feature-flags.md
crates/bonsaidb-local/benches/: basics.rs
crates/bonsaidb-local/src/: .crate-docs.md  async.rs  backend.rs  cli.rs  config.rs  custom_api.rs  database.rs  dispatch.rs  error.rs  hpke_util.rs  lib.rs  open_trees.rs  storage.rs  tasks.rs  tests.rs  vault.rs  views.rs
crates/bonsaidb-macros/: Cargo.toml  README.md  expanded.rs
crates/bonsaidb-macros/src/: lib.rs  view.rs
crates/bonsaidb-macros/tests/: api.rs  collection.rs  file_config.rs  key.rs  mod.rs  schema.rs  view.rs
crates/bonsaidb-server/: Cargo.toml  README.md  server-feature-flags.md
crates/bonsaidb-server/src/: .crate-docs.md  api.rs  async_io_util.rs  backend.rs  config.rs  custom_api.rs  dispatch.rs  error.rs  hosted.rs  lib.rs  server.rs  test_util.rs  tests.rs
crates/bonsaidb-utils/: Cargo.toml  README.md
crates/bonsaidb-utils/src/: lib.rs  lock_macros.rs
crates/bonsaidb/examples/: README.md  acme.rs  axum.rs  basic-local-multidb.rs  basic-local.rs  key-value-store.rs  pubsub.rs  server.rs  users.rs  view-examples.rs  view-histogram.rs
crates/bonsaidb/src/: any_connection.rs  cli.rs  lib.rs  main.rs
crates/bonsaidb/tests/: apis.rs  core-suite.rs  custom-api.rs  sessions.rs  simultaneous-connections.rs  timeouts.rs
examples/acme/: Cargo.toml
examples/acme/examples/: acme.rs
examples/axum/: Cargo.toml
examples/axum/examples/: axum.rs
examples/basic-local/: Cargo.toml
examples/basic-local/examples/: basic-local-multidb.rs  basic-local.rs  key-value-store-async.rs  key-value-store.rs  keyword-search.rs  primary-keys.rs  pubsub-async.rs  pubsub.rs  view-examples-async.rs  view-examples.rs
examples/basic-server/: Cargo.toml
examples/basic-server/examples/: basic-server.rs  cli.rs  custom-api.rs  users.rs
examples/open-library/: .gitignore  Cargo.toml  README.md
examples/open-library/examples/: open-library.rs
jobs/: Cargo.toml
jobs/src/: lib.rs  manager.rs  task.rs  traits.rs
local/: Cargo.toml
local/benches/: basics.rs
local/src/: backup.rs  config.rs  database.rs  dump.rs  error.rs  lib.rs  open_trees.rs  pliantdb_dump.rs  storage.rs  tasks.rs  tests.rs  vault.rs  views.rs
local/src/admin/: mod.rs  (+6 more)
macros/: Cargo.toml
macros/src/: lib.rs
networking/: Cargo.toml
networking/src/: lib.rs
pliantdb/: Cargo.toml
pliantdb/examples/: basic-local-multidb.rs  basic-local.rs  basic.rs  key-value-store.rs  pubsub.rs  server-test.rs  server.rs  users.rs  view-examples.rs
pliantdb/src/: cli.rs  document.rs  lib.rs  main.rs  storage.rs
pliantdb/tests/: core-suite.rs  custom-api.rs  simultaneous-connections.rs
roots/: Cargo.toml  README.md  TODOS.md
roots/benches/: roots-bench.rs
roots/src/: buffer.rs  chunk_cache.rs  context.rs  error.rs  lib.rs  roots.rs  test_util.rs  transactions.rs  tree.rs  vault.rs
server/: Cargo.toml
server/src/: backend.rs  config.rs  error.rs  hosted.rs  lib.rs  server.rs  test_util.rs  tests.rs
xtask/: Cargo.toml
xtask/src/: main.rs
(+333 files in other folders)
