[workspace]

members = [
    "crates/bonsaidb",
    "crates/circulate",
    "crates/bonsaidb-client",
    "crates/bonsaidb-core",
    "crates/bonsaidb-local",
    "crates/bonsaidb-macros",
    "crates/bonsaidb-server",
    "crates/bonsaidb-keystorage-s3",
    "xtask",
]

[patch.crates-io]
fabruic = { path = "../fabruic", version = "0.0.1-dev.2" }
# actionable = { git="https://github.com/khonsulabs/actionable.git", branch="main" }
# actionable = { path = "../actionable/actionable", version = "0.1.0-rc.1" }
# nebari = { path = "../nebari/nebari", version = "0.1.0-rc.3" }
# nebari = { git = "https://github.com/khonsulabs/nebari.git", branch = "main" }

# [patch."https://github.com/khonsulabs/custodian.git"]
# custodian-password = { path = "../custodian/password" }
[profile.bench]
# debug = true # for flamegraph
lto = true
codegen-units = 1

[profile.release]
lto = true
codegen-units = 1
