[workspace]

members = [
    "crates/bonsaidb",
    "crates/bonsaidb-client",
    "crates/bonsaidb-core",
    "crates/bonsaidb-local",
    "crates/bonsaidb-macros",
    "crates/bonsaidb-server",
    "crates/bonsaidb-keystorage-s3",
    "crates/bonsaidb-utils",
    "examples/*",
    "xtask",
]

[patch.crates-io]
# transmog = { path = "../transmog/crates/transmog", version = "0.1.0-dev.1" }
# transmog-pot = { path = "../transmog/crates/transmog-pot", version = "0.1.0-dev.1" }
# transmog = { git = "https://github.com/khonsulabs/transmog.git", branch = "main" }
# transmog-pot = { git = "https://github.com/khonsulabs/transmog.git", branch = "main" }
# pot = { path = "../pot/pot", version = "1.0.0-rc.2" }
# fabruic = { path = "../fabruic", version = "0.0.1-dev.3" }
# actionable = { git="https://github.com/khonsulabs/actionable.git", branch="main" }
# actionable = { path = "../actionable/actionable", version = "0.1.0-rc.1" }
# nebari = { path = "../nebari/nebari", version = "0.1.0-rc.3" }
# nebari = { git = "https://github.com/khonsulabs/nebari.git", branch = "main" }

# [patch."https://github.com/khonsulabs/custodian.git"]
# custodian-password = { path = "../custodian/password" }
[profile.bench]
# debug = true # for flamegraph
lto = true
codegen-units = 1

[profile.release]
lto = true
codegen-units = 1
