[package]
name = "benchmarks"
version = "0.0.0"
edition = "2021"
publish = false

[[bench]]
name = "suite"
harness = false

[[bench]]
name = "commerce"
harness = false

[features]
sqlite = ["rusqlite", "sqlx", "sqlx/sqlite"]
postgresql = ["sqlx", "sqlx/postgres"]

[dependencies]
redis = { version = "0.21", optional = true, features = ["tokio-comp"] }
bonsaidb = { path = "../crates/bonsaidb", version = "0.1.0-dev.4", features = [
    "client",
    "client-websockets",
    "server",
    "server-websockets",
    "local",
] }
futures = "0.3"
criterion = { version = "0.3", features = ["async_tokio", "html_reports"] }
anyhow = "1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
ubyte = "0.10"
env_logger = "0.9"
rusqlite = { version = "0.26", optional = true }
sqlx = { version = "0.5", optional = true, default-features = false, features = [
    "runtime-tokio-rustls",
] }
fake = "2"
rand = { version = "0.8", features = ["small_rng"] }
clap = { version = "3", features = ["derive"] }
flume = "0.10"
num_cpus = "1"
hdrhistogram = "7"
cli-table = "0.4"
dotenv = "0.15"
plotters = "0.3"
tera = "1"
time = { version = "0.3", features = ["formatting"] }
