[package]
name = "benchmarks"
version = "0.0.0"
edition = "2021"
publish = false

[[bench]]
name = "suite"
harness = false

[[bench]]
name = "commerce"
harness = false

[features]
sqlite = ["rusqlite", "sqlx", "sqlx/sqlite"]
postgresql = ["sqlx", "sqlx/postgres"]
compression = ["bonsaidb/compression"]
mongo = ["mongodb"]

[dependencies]
redis = { version = "0.22.3", optional = true, features = ["tokio-comp"] }
bonsaidb = { path = "../crates/bonsaidb", version = "0.4.0", features = [
    "client",
    "server",
    "websockets",
    "local",
    "test-util",
] }
futures = "0.3"
criterion = { version = "0.5.1", features = ["async_tokio", "html_reports"] }
anyhow = "1"
tokio = { version = "1.16.1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
ubyte = "0.10"
env_logger = "0.10"
rusqlite = { version = "0.29.0", optional = true }
sqlx = { version = "0.7.1", optional = true, default-features = false, features = [
    "runtime-tokio-rustls",
] }
fake = "2"
rand = { version = "0.8", features = ["small_rng"] }
clap = { version = "4.1.4", features = ["derive"] }
flume = "0.11.0"
num_cpus = "1"
cli-table = "0.4"
dotenv = "0.15"
plotters = "0.3"
plotters-backend = "0.3"
tera = "1"
time = { version = "0.3", features = ["formatting"] }
mongodb = { version = "2.1.0", features = ["tokio-runtime"], optional = true }
