[package]
name = "bonsaidb"
version = "0.1.0-dev.4"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
edition = "2018"
description = "A programmable, ACID-compliant, document-database inspired by CouchDB."
repository = "https://github.com/khonsulabs/bonsaidb"
license = "MIT OR Apache-2.0"
keywords = ["document-database", "database"]
categories = ["database-implementations", "database"]
readme = "../README.md"
homepage = "https://dev.bonsaidb.io/"

[[bin]]
name = "bonsaidb"
path = "src/main.rs"
required-features = ["cli"]

[[example]]
name = "basic-local"
required-features = ["local"]

[[example]]
name = "basic-local-multidb"
required-features = ["local"]

[[example]]
name = "view-examples"
required-features = ["local"]

[[example]]
name = "view-histogram"
required-features = ["local"]

[[example]]
name = "pubsub"
required-features = ["local", "local-pubsub"]

[[example]]
name = "server"
required-features = ["server", "client"]

[[example]]
name = "users"
required-features = ["server", "client"]

[[example]]
name = "key-value-store"
required-features = ["local", "local-keyvalue"]

[[test]]
name = "core-suite"
required-features = ["server", "client", "test-util"]

[[test]]
name = "simultaneous-connections"
required-features = ["server", "client"]

[[test]]
name = "custom-api"
required-features = ["server", "client"]

[features]
default = []
full = ["local-full", "server-full", "client-full"]
local-full = ["local", "local-pubsub", "local-keyvalue", "local-cli"]
local = ["bonsaidb-local"]
server-full = [
    "server",
    "server-pubsub",
    "server-keyvalue",
    "server-websockets",
    "server-cli",
]
server = ["bonsaidb-server"]
client-full = [
    "client",
    "client-pubsub",
    "client-keyvalue",
    "client-websockets",
    "client-trusted-dns",
]
client = ["bonsaidb-client"]
test-util = ["bonsaidb-client/test-util", "bonsaidb-server/test-util"]

cli = ["anyhow", "tokio", "structopt", "local-cli", "server-cli"]
local-cli = ["bonsaidb-local/cli"]
server-cli = ["bonsaidb-server/cli"]

websockets = ["server-websockets", "client-websockets"]
server-websockets = ["bonsaidb-server/websockets"]
client-websockets = ["bonsaidb-client/websockets"]

client-trusted-dns = ["bonsaidb-client/trusted-dns"]

pubsub = ["server-pubsub", "client-pubsub", "local-pubsub"]
server-pubsub = ["bonsaidb-server/pubsub", "bonsaidb-core/pubsub"]
client-pubsub = ["bonsaidb-client/pubsub", "bonsaidb-core/pubsub"]
local-pubsub = ["bonsaidb-local/pubsub", "bonsaidb-core/pubsub"]

keyvalue = ["server-keyvalue", "client-keyvalue", "local-keyvalue"]
server-keyvalue = ["bonsaidb-server/keyvalue", "bonsaidb-core/keyvalue"]
client-keyvalue = ["bonsaidb-client/keyvalue", "bonsaidb-core/keyvalue"]
local-keyvalue = ["bonsaidb-local/keyvalue", "bonsaidb-core/keyvalue"]

[dependencies]
bonsaidb-core = { path = "../core", version = "0.1.0-dev.4", default-features = false }
bonsaidb-local = { path = "../local", version = "0.1.0-dev.4", default-features = false, optional = true }
bonsaidb-client = { path = "../client", version = "0.1.0-dev.4", default-features = false, optional = true }
bonsaidb-server = { path = "../server", version = "0.1.0-dev.4", default-features = false, optional = true }

tokio = { version = "1", features = ["full"], optional = true }
structopt = { version = "0.3", optional = true }
anyhow = { version = "1", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
anyhow = "1"
bonsaidb-core = { path = "../core", version = "0.1.0-dev.4", default-features = false, features = [
    "test-util",
] }
futures = "0.3"
rand = "0.8"
url = "2.2"
once_cell = "1"
flume = "0.10"
actionable = "0.1.0-dev.4"
fabruic = { version = "0.0.1-dev.2" }
hdrhistogram = "7"

[package.metadata.docs.rs]
all-features = true
