[package]
name = "circulate"
version = "0.1.0"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
edition = "2018"
description = "Lightweight async PubSub framework."
repository = "https://github.com/khonsulabs/bonsaidb"
license = "MIT OR Apache-2.0"
keywords = ["pubsub"]
categories = ["asynchronous"]
readme = "./README.md"

[dependencies]
flume = "0.10"
serde = { version="1", features=["derive"] }
serde_cbor = "0.11"
futures = "0.3"
async-lock = "2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
tokio = { version="1", features=["sync", "macros", "rt"] }

[dev-dependencies]
anyhow = "1"
tokio = { version="1", features=[
    "sync",
    "rt",
    "rt-multi-thread",
    "macros",
    "time",
    "test-util",
] }
