[package]
name = "pliantdb-client"
version = "0.1.0-dev.3"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
edition = "2018"
description = "Client for accessing PliantDb servers."
repository = "https://github.com/khonsulabs/pliantdb"
license = "MIT OR Apache-2.0"
keywords = ["document-database", "database"]
categories = ["database-implementations"]
readme = "../README.md"

[features]
default = ["full"]
full = ["websockets", "trusted-dns", "pubsub", "keyvalue"]
websockets = ["pliantdb-core/websockets", "tokio-tungstenite", "bincode"]
trusted-dns = ["pliantdb-core/trusted-dns"]
pubsub = ["pliantdb-core/pubsub"]
keyvalue = ["pliantdb-core/keyvalue"]
test-util = []

[dependencies]
pliantdb-core = { path = "../core", version = "0.1.0-dev.3", default-features = false, features = ["networking"] }
thiserror = "1"
url = "2.2"
flume = "0.10"
tokio = { version = "1", features = ["sync", "macros"] }
futures = "0.3"
async-trait = "0.1"
once_cell = "1"
serde = "1"
serde_cbor = "0.11"
tokio-tungstenite = { version = "0.14", optional = true }
bincode = { version = "1", optional = true }

[package.metadata.docs.rs]
all-features = true
