[package]
name = "pliantdb-client"
version = "0.1.0-dev.3"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
edition = "2018"
description = "Client for accessing PliantDb servers."
repository = "https://github.com/khonsulabs/pliantdb"
license = "MIT OR Apache-2.0"
keywords = ["document-database", "database"]
categories = ["database-implementations"]
readme = "../README.md"

[features]
default = ["full"]
full = ["websockets", "trusted-dns", "pubsub", "keyvalue"]
websockets = ["pliantdb-core/websockets", "tokio-tungstenite", "bincode"]
trusted-dns = ["fabruic/trust-dns"]
pubsub = ["pliantdb-core/pubsub"]
keyvalue = ["pliantdb-core/keyvalue"]
test-util = []

[dependencies]
pliantdb-core = { path="../core", version="0.1.0-dev.3", default-features=false, features=["networking"] }
thiserror = "1"
url = "2.2"
flume = "0.10"
futures = "0.3"
async-trait = "0.1"
once_cell = "1"
serde = "1"
serde_cbor = "0.11"
bincode = { version="1", optional=true }
async-lock = "2"
js-sys = "0.3"
log = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version="0.3", features=[
    "BinaryType",
    "Blob",
    "ErrorEvent",
    "FileReader",
    "MessageEvent",
    "ProgressEvent",
    "WebSocket",
    "CloseEvent",
] }
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
fabruic = { version="0.0.1-dev.2" }
tokio = { version="1", features=["sync"] }
tokio-tungstenite = { version="0.14", optional=true }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version="1", features=["sync", "macros"] }

[package.metadata.docs.rs]
all-features = true
