[package]
name = "pliantdb-core"
version = "0.1.0-dev-2"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
edition = "2018"
description = "Local storage backend for PliantDB."
repository = "https://github.com/khonsulabs/pliantdb"
license = "MIT OR Apache-2.0"
keywords = ["document-database", "database"]
categories = ["database-implementations"]
readme = "../README.md"
homepage = "https://pliantdb.dev/"

[features]
default = []
test-util = ["futures", "tokio", "networking", "websockets"]
networking = ["fabruic"]
certificate-generation = ["fabruic/certificate"]
websockets = []
trusted-dns = ["fabruic/dns"]

[dependencies]
circulate = { path = "../circulate", version = "0.1.0-dev.1" }
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.11"
async-trait = "0.1"
uuid = { version = "0.8", features = ["v4", "serde"], optional = true }
thiserror = "1"
anyhow = "1"
sha2 = "0.9"
futures = { version = "0.3", optional = true }
tokio = { version = "1", features = ["time"], optional = true }
fabruic = { version = "0.0.1-dev-1", optional = true }
num-traits = "0.2"


[dev-dependencies]
hex-literal = "0.3"
tokio = { version = "1", features = ["full"] }
futures = { version = "0.3" }
num-derive = "0.3"
