[package]
name = "pliantdb-jobs"
version = "0.1.0-dev-1"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
edition = "2018"
description = "Aysnc jobs management for PliantDB."
repository = "https://github.com/khonsulabs/pliantdb"
license = "MIT OR Apache-2.0"
keywords = ["document-database", "database"]
categories = ["database-implementations"]
readme = "../README.md"

[dependencies]
serde = { version = "1", features = ["derive"] }
async-trait = "0.1"
flume = "0.9"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
