[package]
name = "pliantdb-local"
version = "0.1.0-dev-1"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
edition = "2018"
description = "Core functionality and types for PliantDB."
repository = "https://github.com/khonsulabs/pliantdb"
license = "MIT OR Apache-2.0"
keywords = ["document-database", "database"]
categories = ["database-implementations", "database"]
readme = "../README.md"

[lib]

[features]
default = ["cli"]
cli = ["structopt"]

[dependencies]
async-trait = "0.1"
pliantdb-core = { path = "../core", version = "0.1.0-dev-1" }
pliantdb-jobs = { path = "../jobs", version = "0.1.0-dev-1" }
sled = "0.34"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.11"
bincode = "1.3"
anyhow = "1"
flume = "0.10"
itertools = "0.10"
structopt = { version = "0.3", optional = true }

[dev-dependencies]
pliantdb-core = { path = "../core", version = "0.1.0-dev-1", features = ["test-util"] }
futures = "0.3"
criterion = { version = "0.3", features = ["async_tokio"] }

[[bench]]
name = "basics"
harness = false
