[package]
name = "pliantdb-local"
version = "0.1.0-dev.4"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
edition = "2018"
description = "Local database storage for PliantDb."
repository = "https://github.com/khonsulabs/pliantdb"
license = "MIT OR Apache-2.0"
keywords = ["document-database", "database"]
categories = ["database-implementations", "database"]
readme = "../README.md"
homepage = "https://pliantdb.dev/"

[lib]

[features]
default = ["full"]
full = ["cli", "pubsub", "keyvalue"]
cli = ["structopt"]
internal-apis = []
pubsub = ["pliantdb-core/pubsub"]
keyvalue = ["pliantdb-core/keyvalue"]

[dependencies]
async-trait = "0.1"
pliantdb-core = { path="../core", version="0.1.0-dev.4" }
pliantdb-jobs = { path="../jobs", version="0.1.0-dev.4" }
sled = "0.34"
thiserror = "1"
tokio = { version="1", features=["full"] }
serde = { version="1", features=["derive"] }
serde_cbor = "0.11"
bincode = "1.3"
anyhow = "1"
flume = "0.10"
itertools = "0.10"
structopt = { version="0.3", optional=true }
rand = "0.8"
chacha20poly1305 = { version="0.8", features=["xchacha20poly1305"] }
byteorder = "1"
futures = "0.3"
zeroize = "1"
region = "2"
blake2 = "0.9"

[dev-dependencies]
pliantdb-core = { path="../core", version="0.1.0-dev.4", features=["test-util"] }
futures = "0.3"
criterion = { version="0.3", features=["async_tokio"] }

[[bench]]
name = "basics"
harness = false

[package.metadata.docs.rs]
all-features = true
