[package]
name = "bonsaidb-local"
version = "0.1.0-dev.4"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
edition = "2018"
description = "Local database storage for BonsaiDb."
repository = "https://github.com/khonsulabs/bonsaidb"
license = "MIT OR Apache-2.0"
keywords = ["document-database", "database"]
categories = ["database-implementations", "database"]
readme = "../README.md"
homepage = "https://bonsaidb.dev/"

[lib]

[features]
default = ["full"]
full = ["cli", "pubsub", "keyvalue"]
cli = ["structopt"]
internal-apis = []
pubsub = ["bonsaidb-core/pubsub"]
keyvalue = ["bonsaidb-core/keyvalue"]

[dependencies]
async-trait = "0.1"
bonsaidb-core = { path="../core", version="0.1.0-dev.4" }
bonsaidb-jobs = { path="../jobs", version="0.1.0-dev.4" }
sled = "0.34"
thiserror = "1"
tokio = { version="1", features=["full"] }
serde = { version="1", features=["derive"] }
serde_cbor = "0.11"
bincode = "1.3"
anyhow = "1"
flume = "0.10"
itertools = "0.10"
structopt = { version="0.3", optional=true }
rand = "0.8"
chacha20poly1305 = { version="0.8", features=["xchacha20poly1305"] }
byteorder = "1"
futures = "0.3"
zeroize = "1"
region = "2"
blake3 = "0.3"
x25519-dalek = { version="1" }
x25519-rand = { package="rand", version="0.7" }
hpke = { version="0.6", default-features=false, features=["x25519", "serde_impls"] }

[dev-dependencies]
bonsaidb-core = { path="../core", version="0.1.0-dev.4", features=["test-util"] }
futures = "0.3"
criterion = { version="0.3", features=["async_tokio"] }

[[bench]]
name = "basics"
harness = false

[package.metadata.docs.rs]
all-features = true
