[package]
name = "bonsaidb-macros"
version = "0.1.0-dev.4"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
edition = "2018"
description = "Macros for use in `BonsaiDb`"
repository = "https://github.com/khonsulabs/bonsaidb"
license = "MIT OR Apache-2.0"
keywords = ["document-database", "database"]
categories = ["database-implementations"]
readme = "../README.md"
homepage = "https://dev.bonsaidb.io/"

[lib]
proc-macro = true

[dependencies]
syn = "1"
quote = "1"
proc-macro-error = "1"

[dev-dependencies]
compiletest_rs = "0.7"
