[package]
name = "pliantdb-networking"
version = "0.1.0-dev-1"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
edition = "2018"
description = "Network protocol structures PliantDB."
repository = "https://github.com/khonsulabs/pliantdb"
license = "MIT OR Apache-2.0"
keywords = ["document-database", "database"]
categories = ["database-implementations"]
readme = "../README.md"


[dependencies]
pliantdb-core = { path = "../core", version = "0.1.0-dev-1" }
cosmicverge-networking = { git = "https://github.com/daxpedda/cosmicverge.git", branch = "networking" }

serde = { version = "1", features = ["derive", "rc"] }
