[package]
name = "pliantdb"
version = "0.1.0-dev-1"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
edition = "2018"
description = "a programmable document database inspired by CouchDB"
repository = "https://github.com/khonsulabs/pliantdb"
license = "MIT OR Apache-2.0"
keywords = ["document-database", "database"]
categories = ["database-implementations", "database"]
readme = "../README.md"

[[bin]]
name = "pliantdb"
path = "src/main.rs"
required-features = ["cli"]

[[example]]
name = "basic-local"
required-features = ["local"]

[[example]]
name = "view-examples"
required-features = ["local"]

[[example]]
name = "server"
required-features = ["server", "client"]

[features]
default = ["cli"]
full = ["local", "server", "client", "websockets", "trusted-dns"]
local = ["pliantdb-local"]
server = ["pliantdb-server"]
client = ["pliantdb-client"]
cli = [
    "full",
    "anyhow",
    "tokio",
    "structopt",
    "pliantdb-local/cli",
    "pliantdb-server/cli",
]
websockets = ["pliantdb-server/websockets", "pliantdb-client/websockets"]
trusted-dns = ["pliantdb-server/trusted-dns", "pliantdb-client/trusted-dns"]

[dependencies]
pliantdb-core = { path = "../core", version = "0.1.0-dev-1" }
pliantdb-local = { path = "../local", version = "0.1.0-dev-1", optional = true }
pliantdb-client = { path = "../client", version = "0.1.0-dev-1", optional = true }
pliantdb-server = { path = "../server", version = "0.1.0-dev-1", optional = true }

tokio = { version = "1", features = ["full"], optional = true }
structopt = { version = "0.3", optional = true }
anyhow = { version = "1", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
anyhow = "1"
pliantdb-core = { path = "../core", version = "0.1.0-dev-1", features = ["test-util"] }
futures = "0.3"
rand = "0.8"
