[package]
name = "pliantdb"
version = "0.1.0-dev-2"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
edition = "2018"
description = "A programmable, ACID-compliant, document-database inspired by CouchDB."
repository = "https://github.com/khonsulabs/pliantdb"
license = "MIT OR Apache-2.0"
keywords = ["document-database", "database"]
categories = ["database-implementations", "database"]
readme = "../README.md"
homepage = "https://pliantdb.dev/"

[[bin]]
name = "pliantdb"
path = "src/main.rs"
required-features = ["cli"]

[[example]]
name = "basic-local"
required-features = ["local"]

[[example]]
name = "view-examples"
required-features = ["local"]

[[example]]
name = "pubsub"
required-features = ["local", "local-pubsub"]

[[example]]
name = "server"
required-features = ["server", "client"]

[features]
default = ["cli"]
full = ["local", "server", "client", "websockets", "trusted-dns", "pubsub"]
local = ["pliantdb-local"]
server = ["pliantdb-server"]
client = ["pliantdb-client"]

cli = ["full", "anyhow", "tokio", "structopt", "local-cli", "server-cli"]
local-cli = ["pliantdb-local/cli"]
server-cli = ["pliantdb-server/cli"]

websockets = ["server-websockets", "client-websockets"]
server-websockets = ["pliantdb-server/websockets"]
client-websockets = ["pliantdb-client/websockets"]

trusted-dns = ["server-trusted-dns", "client-trusted-dns"]
server-trusted-dns = ["pliantdb-server/trusted-dns"]
client-trusted-dns = ["pliantdb-client/trusted-dns"]

pubsub = ["server-pubsub", "client-pubsub", "local-pubsub"]
server-pubsub = ["pliantdb-server/pubsub", "pliantdb-core/pubsub"]
client-pubsub = ["pliantdb-client/pubsub", "pliantdb-core/pubsub"]
local-pubsub = ["pliantdb-local/pubsub", "pliantdb-core/pubsub"]

[dependencies]
pliantdb-core = { path = "../core", version = "0.1.0-dev-2" }
pliantdb-local = { path = "../local", version = "0.1.0-dev-2", optional = true }
pliantdb-client = { path = "../client", version = "0.1.0-dev-2", optional = true }
pliantdb-server = { path = "../server", version = "0.1.0-dev-2", optional = true }

tokio = { version = "1", features = ["full"], optional = true }
structopt = { version = "0.3", optional = true }
anyhow = { version = "1", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
anyhow = "1"
pliantdb-core = { path = "../core", version = "0.1.0-dev-2", features = ["test-util"] }
futures = "0.3"
rand = "0.8"
