[package]
name = "pliantdb"
version = "0.1.0-dev.3"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
edition = "2018"
description = "A programmable, ACID-compliant, document-database inspired by CouchDB."
repository = "https://github.com/khonsulabs/pliantdb"
license = "MIT OR Apache-2.0"
keywords = ["document-database", "database"]
categories = ["database-implementations", "database"]
readme = "../README.md"
homepage = "https://pliantdb.dev/"

[[bin]]
name = "pliantdb"
path = "src/main.rs"
required-features = ["cli"]

[[example]]
name = "basic-local"
required-features = ["local"]

[[example]]
name = "basic-local-multidb"
required-features = ["local"]

[[example]]
name = "view-examples"
required-features = ["local"]

[[example]]
name = "pubsub"
required-features = ["local", "local-pubsub"]

[[example]]
name = "server"
required-features = ["server", "client"]

[[example]]
name = "key-value-store"
required-features = ["local", "local-keyvalue"]

[[test]]
name = "core-suite"
required-features = ["server", "client", "test-util"]

[[test]]
name = "simultaneous-connections"
required-features = ["server", "client"]

[features]
default = []
full = ["local-full", "server-full", "client-full"]
local-full = ["local", "local-pubsub", "local-keyvalue", "local-cli"]
local = ["pliantdb-local"]
server-full = [
    "server",
    "server-pubsub",
    "server-keyvalue",
    "server-websockets",
    "server-cli",
]
server = ["pliantdb-server"]
client-full = [
    "client",
    "client-pubsub",
    "client-keyvalue",
    "client-websockets",
    "client-trusted-dns",
]
client = ["pliantdb-client"]
test-util = ["pliantdb-client/test-util", "pliantdb-server/test-util"]

cli = ["anyhow", "tokio", "structopt", "local-cli", "server-cli"]
local-cli = ["pliantdb-local/cli"]
server-cli = ["pliantdb-server/cli"]

websockets = ["server-websockets", "client-websockets"]
server-websockets = ["pliantdb-server/websockets"]
client-websockets = ["pliantdb-client/websockets"]

client-trusted-dns = ["pliantdb-client/trusted-dns"]

pubsub = ["server-pubsub", "client-pubsub", "local-pubsub"]
server-pubsub = ["pliantdb-server/pubsub", "pliantdb-core/pubsub"]
client-pubsub = ["pliantdb-client/pubsub", "pliantdb-core/pubsub"]
local-pubsub = ["pliantdb-local/pubsub", "pliantdb-core/pubsub"]

keyvalue = ["server-keyvalue", "client-keyvalue", "local-keyvalue"]
server-keyvalue = ["pliantdb-server/keyvalue", "pliantdb-core/keyvalue"]
client-keyvalue = ["pliantdb-client/keyvalue", "pliantdb-core/keyvalue"]
local-keyvalue = ["pliantdb-local/keyvalue", "pliantdb-core/keyvalue"]

[dependencies]
pliantdb-core = { path = "../core", version = "0.1.0-dev.3", default-features = false }
pliantdb-local = { path = "../local", version = "0.1.0-dev.3", default-features = false, optional = true }
pliantdb-client = { path = "../client", version = "0.1.0-dev.3", default-features = false, optional = true }
pliantdb-server = { path = "../server", version = "0.1.0-dev.3", default-features = false, optional = true }

tokio = { version = "1", features = ["full"], optional = true }
structopt = { version = "0.3", optional = true }
anyhow = { version = "1", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
anyhow = "1"
pliantdb-core = { path = "../core", version = "0.1.0-dev.3", default-features = false, features = ["test-util"] }
futures = "0.3"
rand = "0.8"
url = "2.2"
once_cell = "1"
flume = "0.10"

[package.metadata.docs.rs]
all-features = true
