[package]
name = "bonsaidb-roots"
version = "0.1.0"
edition = "2018"

[features]
default = ["uring"]
uring = ["tokio-uring"]

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-uring = { version = "0.1", optional = true }
zerocopy = "0.5"
thiserror = "1"
async-trait = "0.1"
cfg-if = "1"
byteorder = "1"
futures = "0.3"
