[package]
name = "bonsaidb-roots"
version = "0.1.0"
edition = "2018"
description = "ACID-compliant, append-only B-Tree storage inspired by Couchstore."
repository = "https://github.com/khonsulabs/bonsaidb"
license = "MIT OR Apache-2.0"
keywords = ["btree", "database"]
categories = ["database-implementations"]
readme = "./README.md"
homepage = "https://dev.bonsaidb.io/"

[features]
default = ["uring"]
uring = ["tokio-uring"]

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-uring = { version = "0.1", optional = true }
zerocopy = "0.5"
thiserror = "1"
async-trait = "0.1"
cfg-if = "1"
byteorder = "1"
futures = "0.3"
flume = "0.10"
crc = "2"
once_cell = "1"

[dev-dependencies]
nanorand = "0.6"

[profile.release]
lto = true
codegen-units = 1
